--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="images/Arnab_Jana.png" alt="Arnab's rofile picture">
+                <img src="Arnab_Jana.png" alt="Arnab's profile picture">
             </td>
             <td>
                 <h1>Arnab Jana</h1> 
